Refactoring, Rimosso ICellaConDistanze, aggiunto DistanzaLibera
- Aggiuto DistanzaLibera come contenitore di distanza e distanze parziali;
- Rimosso ICellaConDistanza, ora quando serve una distanza la si ricalcola;
- GrigliaConOrigine non precalcola più le distanze (RIP branchless programming);
- Sistemato creaRiassuntoTabella, ora aggiusta le dimensioni in base al contenuto;
- AppletMain salva i riassunti delle statistiche di esecuzione in una cartella di output.